@@ -454,6 +454,9 @@ namespace libtorrent
 		: url(u)
 		, next_announce(min_time())
 		, min_announce(min_time())
+		, scrape_incomplete(-1)
+		, scrape_complete(-1)
+		, scrape_downloaded(-1)
 		, tier(0)
 		, fail_limit(0)
 		, fails(0)
