@@ -569,7 +569,7 @@ namespace libtorrent
 		}
 
 		cb->tracker_response(tracker_req(), m_target.address(), ip_list
-			, peer_list, interval, min_interval, complete, incomplete, address(), "" /*trackerid*/);
+			, peer_list, interval, min_interval, complete, incomplete, 0, address(), "" /*trackerid*/);
 
 		close();
 		return true;
